[project]
name = "minestrapper"
version="0.3.4"
description="Minestrapper is a bootstrapper for Minecraft servers that lets you easily add custom features to your server without needing a full mod/plugin loader."
readme = "README.md"
authors = [
    { name = "Faizaan J" } 
]
dependencies = [
    "prompt_toolkit>=3.0.0",
]
requires-python= ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
